fix: dialog z-index

--- a/src/interactors/dialog/dialog.scss
+++ b/src/interactors/dialog/dialog.scss
@@ -2,6 +2,7 @@
 
 :host {
     --max-width: var(--wrap-xxs);
+    z-index: 1070;
 }
 
 slot[name=icon]::slotted(*),
